--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "node-sass": "^4.11.0",
-    "vue-router": "^3.0.1",
     "devextreme": "^20.2.4",
-    "devextreme-vue": "^20.2.4"
+    "devextreme-vue": "^20.2.4",
+    "node-sass": "^4.11.0",
+    "request": "^2.79.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
