--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "npm run build-themes"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "devextreme": "^20.2.4",
     "devextreme-vue": "^20.2.4",
