--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "core-js": "^3.6.5",
     "devextreme": "^20.2.4",
     "devextreme-vue": "^20.2.4",
+    "firebase": "^8.6.3",
+    "moment": "^2.29.1",
     "node-sass": "^4.11.0",
     "request": "^2.79.0",
     "vue": "^2.6.11",
+    "vue-qrcode-component": "^2.1.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
