--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^4.11.0",
     "request": "^2.79.0",
     "vue": "^2.6.11",
+    "vue-currency-filter": "^5.2.0",
     "vue-qrcode-component": "^2.1.1",
     "vue-router": "^3.0.1"
   },
